Add status input component

--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -59,7 +59,7 @@
 
   <country-of-origin-input
     [control]="registerForm.controls['country_of_origin']"
-    [apiErrors]="apiErrors">>
+    [apiErrors]="apiErrors">
   </country-of-origin-input>
 
   <h3 class="ui dividing header">
