Added ssn input component

--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -33,6 +33,11 @@
     [apiErrors]="apiErrors">
   </phone-input>
 
+  <ssn-input
+    [apiErrors]="apiErrors"
+    [control]="settingsForm.controls['ssn']">
+  </ssn-input>
+
   <country-of-origin-input
     [control]="settingsForm.controls['country_of_origin']"
     [apiErrors]="apiErrors">
